feat: card added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
     <main>
         <div class="container">
-            <div class="row-col">
+            <div class="row row-col">
                 <div class="col">
 
                     <!-- Title section -->
@@ -94,8 +94,25 @@
                         </div>
                     </form>
                 </div>
-            </div>
 
+                <!-- Card -->
+                <div class="col-xl-4 mt-3 mx-3">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./img/help-desk-edit.jpg" class="card-img-top" alt="help desk img">
+                        <div class="card-body">
+                            <h5 class="card-title">I nostri contatti</h5>
+                            <p class="card-text">Se hai bisogno di aiuto puoi contattarci:</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Help@boolfactory.test</li>
+                            <li class="list-group-item">+1122334455</li>
+                        </ul>
+                        <div class="card-body">
+                            <a href="#" class="card-link">Help desk</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <!-- Import libreria Bootstrap e script js -->
