--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="container-fluid d-flex justify-content-center bg-dark text-white py-5 mt-5">
+            <div>
+                &copy; 2024 - Tutti i diritti riservati
+            </div>
+        </div>
+    </footer>
     <!-- Import libreria Bootstrap e script js -->
     <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
