--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-            <div class="container-fluid mx-5">
+            <div class="container-fluid mx-3">
                 <a class="navbar-brand" href="#">Bool Factory</a>
                 <div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -47,8 +47,7 @@
                     </div>
 
                     <!-- Form -->
-                    <!-- TODO: aggiungere la action -->
-                    <form action="">
+                    <form>
                         <div class="mb-3">
                             <label class="form-label">Nome</label>
                             <input type="text" class="form-control">
@@ -78,16 +77,16 @@
                             <label class="form-label">Codice Promozionale (opzionale)</label>
                             <input type="text" class="form-control">
                         </div>
-                        <div class="form-check mb-5">
+                        <div class="form-check mb-3">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                             <label class="form-check-label" for="flexCheckDefault">Accetto la Privacy Policy</label>
                         </div>
                         <div class="container">
                             <div class="row justify-content-around">
-                                <div class="col-5">
+                                <div class="col-md-5 text-center my-2">
                                     <button type="submit" class="btn btn-primary">Calcola preventivo</button>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-md-5 text-center my-2">
                                     <p><strong>Prezzo finale <br> € 200</strong>,00</p>
                                 </div>
                             </div>
@@ -96,9 +95,9 @@
                 </div>
 
                 <!-- Card -->
-                <div class="col-xl-4 mt-3 mx-3">
-                    <div class="card" style="width: 18rem;">
-                        <img src="./img/help-desk-edit.jpg" class="card-img-top" alt="help desk img">
+                <div class="col-lg-4">
+                    <div class="card mt-3 mx-3">
+                        <img src="./img/help-desk.jpg" class="card-img-top" alt="help desk img">
                         <div class="card-body">
                             <h5 class="card-title">I nostri contatti</h5>
                             <p class="card-text">Se hai bisogno di aiuto puoi contattarci:</p>
