feat: code refactoring

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Email</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1">
+                            <input type="email" class="form-control">
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Tipo di lavoro</label>
@@ -68,8 +68,8 @@
                             </select>
                         </div>
                         <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Textarea con Bootstrap 5</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <label class="form-label">Textarea con Bootstrap 5</label>
+                            <textarea class="form-control" rows="3"></textarea>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Codice Promozionale (opzionale)</label>
@@ -77,7 +77,7 @@
                         </div>
                         <div class="form-check mb-3">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="form-check-label" for="flexCheckDefault">Accetto la Privacy Policy</label>
+                            <label class="form-check-label">Accetto la Privacy Policy</label>
                         </div>
                         <div class="container">
                             <div class="row justify-content-around">
