feat: code refactoring and testing

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                         <div class="mb-3">
                             <label class="form-label">Tipo di lavoro</label>
                             <select class="form-select commission" aria-label="Default select example" required>
-                                <option value="">Seleziona il tipo di lavoro</option>
+                                <!-- <option value="">Seleziona il tipo di lavoro</option>
                                 <option value="1">Sviluppo Back-end</option>
                                 <option value="2">Sviluppo Front-end</option>
-                                <option value="3">Project Analysis</option>
+                                <option value="3">Project Analysis</option> -->
                             </select>
                         </div>
                         <div class="mb-3">
